app-manifests/hello-world/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: 100Mi
            cpu: 100m
          limits:
            memory: 150Mi
            cpu: 150m
        livenessProbe:
          httpGet:
            port: 80
            path: /
          initialDelaySeconds: 30
          periodSeconds: 10
#         volumeMounts:
#         - mountPath: /usr/share/nginx/html
#           name: html-files
#       volumes:
#       - name: html-files
#         configMap:
#           name: html-files
# ---
# apiVersion: v1
# kind: ConfigMap
# metadata:
#   name: html-files
# data:
#   index.html: <h1>Hello, World!</h1>
