app-manifests/hello-world/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: localhost
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /hello-world(/|$)(.*)
        backend:
          service:
            name: hello-world
            port: 
              number: 80
  - host: hello-world.localhost
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: hello-world
            port: 
              number: 80
